vortex-btrblocks/tests/snapshots/golden__regular__binary_low_cardinality.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: binary, len=16384, nbytes=315856
root: vortex.dict(binary, len=16384) nbytes=6196
  metadata: all_values_referenced: true
  codes: fastlanes.bitpacked(u8, len=16384) nbytes=6144
    metadata: offset: 0
    block_offsets: vortex.sequence(u64, len=17) nbytes=0
      metadata: base: 0u64, multiplier: 384i64
  values: vortex.varbin(binary, len=5) nbytes=52
    metadata: 
    offsets: vortex.primitive(u8, len=6) nbytes=6
      metadata: ptype: u8
