vortex-btrblocks/tests/snapshots/golden__regular__decimal_prices.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: decimal(12,2), len=16384, nbytes=131072
root: vortex.decimal_byte_parts.v2(decimal(12,2), len=16384) nbytes=49152
  metadata: 
  msp: fastlanes.bitpacked(i32, len=16384) nbytes=49152
    metadata: offset: 0
    block_offsets: vortex.sequence(u64, len=17) nbytes=0
      metadata: base: 0u64, multiplier: 3072i64
