vortex-btrblocks/tests/snapshots/golden__regular__float_alp_prices.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: f64, len=16384, nbytes=131072
root: vortex.alp(f64, len=16384) nbytes=49152
  metadata: exponents: e: 14, f: 12
  encoded: fastlanes.bitpacked(i64, len=16384) nbytes=49152
    metadata: offset: 0
    block_offsets: vortex.sequence(u64, len=17) nbytes=0
      metadata: base: 0u64, multiplier: 3072i64
