vortex-btrblocks/tests/snapshots/golden__regular__int_monotone_jitter.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: u64, len=16384, nbytes=131072
root: fastlanes.for.v2(u64, len=16384) nbytes=49159
  metadata: offset: 0
  encoded: fastlanes.bitpacked(u64, len=16384) nbytes=49152
    metadata: offset: 0
    block_offsets: vortex.sequence(u64, len=17) nbytes=0
      metadata: base: 0u64, multiplier: 3072i64
  references: vortex.constant(u64, len=16) nbytes=7
    metadata: scalar: 1700000001036u64
