vortex-btrblocks/tests/snapshots/golden__regular__int_mostly_null.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: i32?, len=16384, nbytes=67584
root: vortex.sparse(i32?, len=16384) nbytes=3031
  metadata: fill_value: null
  patch_indices: vortex.primitive(u16, len=823) nbytes=1646
    metadata: ptype: u16
  patch_values: fastlanes.bitpacked(i32?, len=823) nbytes=1383
    metadata: offset: 0
    validity_child: vortex.bool(bool, len=823) nbytes=103
      metadata: offset: 0
    block_offsets: vortex.sequence(u64, len=2) nbytes=0
      metadata: base: 0u64, multiplier: 1280i64
