vortex-btrblocks/tests/snapshots/golden__regular__int_negatives.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: i64, len=16384, nbytes=131072
root: fastlanes.for.v2(i64, len=16384) nbytes=16387
  metadata: offset: 0
  encoded: fastlanes.bitpacked(i64, len=16384) nbytes=16384
    metadata: offset: 0
    block_offsets: vortex.sequence(u64, len=17) nbytes=0
      metadata: base: 0u64, multiplier: 1024i64
  references: vortex.constant(i64, len=16) nbytes=3
    metadata: scalar: -128i64
