vortex-btrblocks/tests/snapshots/golden__regular__int_runs.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: i32, len=16384, nbytes=65536
root: vortex.runend(i32, len=16384) nbytes=3974
  metadata: offset: 0
  ends: fastlanes.for.v2(u16, len=1020) nbytes=1794
    metadata: offset: 0
    encoded: fastlanes.bitpacked(u16, len=1020) nbytes=1792
      metadata: offset: 0
      block_offsets: vortex.sequence(u64, len=2) nbytes=0
        metadata: base: 0u64, multiplier: 1792i64
    references: vortex.constant(u16, len=1) nbytes=2
      metadata: scalar: 13u16
  values: fastlanes.for.v2(i32, len=1020) nbytes=2180
    metadata: offset: 0
    encoded: fastlanes.bitpacked(i32, len=1020) nbytes=2176
      metadata: offset: 0
      block_offsets: vortex.sequence(u64, len=2) nbytes=0
        metadata: base: 0u64, multiplier: 2176i64
    references: vortex.constant(i32, len=1) nbytes=4
      metadata: scalar: -49931i32
